--- a/StyleCSS/camera.css
+++ b/StyleCSS/camera.css
@@ -189,7 +189,7 @@ body {
 }
 
 /* 2. Style chung cho 2 nút (Không dùng tọa độ riêng nữa) */
-#printBtn, #ResetBtn {
+#printBtn, #ResetBtn, #homeBtn {
     position: relative; /* Trả về vị trí tự nhiên trong hàng ngang */
     background: linear-gradient(145deg, #ffeead, #f0c05a);
     border: 5px solid #8b5c2c;
@@ -300,7 +300,7 @@ body {
         padding-bottom: 30px; /* Khoảng cách an toàn với đáy màn hình */
     }
 
-    #printBtn, #ResetBtn {
+    #printBtn, #ResetBtn, #homeBtn {
         font-size: 1.2rem !important;
         padding: 10px 20px !important;
         margin: 0 !important;
@@ -398,7 +398,7 @@ body {
         padding-bottom: 30px; /* Khoảng cách an toàn với đáy màn hình */
     }
 
-    #printBtn, #ResetBtn {
+    #printBtn, #ResetBtn, #homeBtn {
         font-size: 1.2rem !important;
         padding: 10px 20px !important;
         margin: 0 !important;
@@ -495,7 +495,7 @@ body {
         padding-bottom: 30px; /* Khoảng cách an toàn với đáy màn hình */
     }
 
-    #printBtn, #ResetBtn {
+    #printBtn, #ResetBtn, #homeBtn {
         font-size: 1.2rem !important;
         padding: 10px 20px !important;
         margin: 0 !important;
